shadcn-tailwind separate template

--- a/templates/features/ui/shadcn-tailwind/app/app.css
+++ b/templates/features/ui/shadcn-tailwind/app/app.css
@@ -1,5 +1,5 @@
-@import 'tailwindcss';
-@import 'tw-animate-css';
+@import "tailwindcss";
+@import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -117,4 +117,16 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
+input[type="password"]::-ms-reveal {
+  filter: invert(1);
+}
+
+input[type="password"]::-webkit-contacts-auto-fill-button {
+  filter: invert(1);
 }
